--- a/public/css/support.css
+++ b/public/css/support.css
@@ -1,7 +1,3 @@
-#support {
-  padding: 100px 0 100px 0;
-}
-
 #map {
   border: double 15px transparent;
   padding: 17px;
